--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,3 +1,7 @@
+## virtualhost files
+shared_folder = "../../jewelry_shop"
+
+
 Vagrant.configure("2") do |config|
     config.vm.box     = "squeeze64puppet3"
     config.vm.box_url = "http://l4bs.slynett.com/vagrant/squeeze64-puppet3.box"
@@ -14,8 +18,7 @@ Vagrant.configure("2") do |config|
     config.vm.network :private_network, ip: '192.168.33.10'
     config.vm.hostname = "dev-lamp"
 
-    #config.vm.synced_folder "vagrant", "/vagrant", "."
-    config.vm.synced_folder "../../jewelry_shop", "/var/www/jewelry_shop/"
+    config.vm.synced_folder "#{shared_folder}", "/var/www/vhost/"
 
     config.vm.provision :puppet do |puppet|
         puppet.options = '--verbose'
