--- a/vagrant/mymodules/system/files/php/php.ini
+++ b/vagrant/mymodules/system/files/php/php.ini
@@ -938,7 +938,7 @@ default_socket_timeout = 60
 ; If you only provide the name of the extension, PHP will look for it in its
 ; default extension directory.
 ;
-extension=translit.so
+; extension=translit.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
